pam/client_deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: testpam-client
  labels:
    app: testpam-client
    app.kubernetes.io/component: testpam-client
    app.kubernetes.io/instance: testpam-client
    app.kubernetes.io/part-of: testpam-client-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: testpam-client
  template:
    metadata:
      labels:
        app: testpam-client
        deploymentconfig: testpam-client
    spec:
      containers:
        - name: testpam-client
          # update to your repo
          image: quay.io/{REPO_HERE}/testpamclient:latest
          ports:
            - containerPort: 8080
      imagePullSecrets:
      - name: pull-secret
