pam/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: testpam
  labels:
    app: testpam
    app.kubernetes.io/component: testpam
    app.kubernetes.io/instance: testpam
    app.kubernetes.io/part-of: testpam-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: testpam
  template:
    metadata:
      labels:
        app: testpam
        deploymentconfig: testpam
    spec:
      containers:
        - name: testpam
          # update to your repo
          image: quay.io/{REPO_HERE}/testpam:latest
          ports:
            - containerPort: 8080
      imagePullSecrets:
      - name: pull-secret
