pam/client_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: testpam-client
    app.kubernetes.io/component: testpam-client
    app.kubernetes.io/instance: testpam-client
    app.kubernetes.io/part-of: testpam-client-app
  name: testpam-client
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    name: 8080-tcp
  selector:
    app: testpam-client
  sessionAffinity: None
  type: ClusterIP
