pam/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: testpam
    app.kubernetes.io/component: testpam
    app.kubernetes.io/instance: testpam
    app.kubernetes.io/part-of: testpam-app
  name: testpam
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    name: 8080-tcp
  selector:
    app: testpam
  sessionAffinity: None
  type: ClusterIP
