pam/client_ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: testpam-client
spec:
  rules:
    # update to your host address for inbound traffic
    - host: testpamclient.example.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              serviceName: testpam-client
              servicePort: 8080-tcp
